# mdps-application-catalog

./: .gitignore  application-catalog.api-fixed.yaml  application-catalog.api.yaml
dev-env/: aws-eks.tf  aws-elasticache.tf  aws-opensearch.tf  aws-rabbitmq.tf  aws-rds.tf  aws.tf  data.tf  eks.tf  helm-ingress-nginx.tf  helm-invenio.tf  network.tf  nginx-values.yaml  opensearch-access-policy.json.tmpl  outputs.tf  terraform.tf  variables.tf
invenio-test/: .invenio  Dockerfile  Makefile  Pipfile  README.md  celerybeat-schedule  docker-compose.full.yml  docker-services.yml  invenio.cfg  package-lock.json
invenio-test/manifests/: deployment.yaml  service.yaml
invenio-test/site/: .gitkeep  setup.cfg
inveniocheck/: .invenio  Makefile  Pipfile  README.md  docker-compose.full.yml  docker-compose.yml  docker-services.yml  invenio.cfg
inveniocheck/app_data/: vocabularies.yaml
inveniocheck/manifests/: deployment.yaml
inveniocheck/site/: .gitkeep  setup.cfg
ogc-application-catalog/: .invenio  Pipfile  README.md  docker-compose.full.yml  docker-compose.yml  docker-services.yml  invenio.cfg
ogc-application-catalog/app_data/: vocabularies.yaml
ogc-application-catalog/site/: .gitkeep  setup.cfg
ogc-application-catalog/site/ogc_application_catalog/: views.py  webpack.py
register-api/: .dockerignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  entrypoint.sh  env.example  env.rdm  env.sample.noauth  main.py  pytest.ini  requirements.txt  setup.py
register-api/alembic/: env.py
schema/: application.schema.json
(+86 files in other folders)
