
[metadata]
name = ogc-application-catalog

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    ogc_application_catalog_views = ogc_application_catalog.views:create_blueprint
invenio_assets.webpack =
    ogc_application_catalog_theme = ogc_application_catalog.webpack:theme
